rgbds-0.6.1/test/link/cascading-errors-fatal-assert.out
error: cascading-errors-fatal-assert.asm(1): Unknown symbol "UnknownSymbol"
FATAL: cascading-errors-fatal-assert.asm(1): couldn't evaluate assertion
Linking aborted after 2 errors
