rgbds-0.6.1/test/link/cascading-errors-fatal-assert.asm
	assert FATAL, UnknownSymbol == 42
	assert WeDontReachHere
